clusters/delta/production/omni/omni-auth-service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: production
spec:
  ports:
    - port: 443
      targetPort: 5556
---
apiVersion: v1
kind: Endpoints
metadata:
  name: auth-service
  namespace: production
subsets:
  - addresses:
      - ip: 10.0.0.69
    ports:
      - port: 5556
