clusters/delta/production/omni/omni-service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-service
  namespace: production
spec:
  ports:
    - port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omni-service
  namespace: production
subsets:
  - addresses:
      - ip: 10.0.0.69
    ports:
      - name: https
        port: 443
      - name: siderolink
        port: 8090
