clusters/delta/production/omni/omni-servive.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-service
  namespace: production
spec:
  type: ExternalName
  externalName: 10.0.0.69
