clusters/delta/production/omni/omni-grpcs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-grpc-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "myca-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - omni.internal
    secretName: omni-tls-secret
  rules:
  - host: omni.internal
    http:
      paths:
      - path: /api/omni.resources.ResourceService/
        pathType: Prefix
        backend:
          service:
            name: omni-service
            port:
              number: 443
