clusters/delta/production/omni/omni-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-ingress
  namespace: production
  annotations:
    annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - omni.internal
    secretName: omni-tls-secret
  rules:
  - host: omni.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omni-service
            port:
              number: 443
